# pe100challenge

./: README.md  _config.yml
problem1/: Cargo.toml  README.md
problem10/: Cargo.toml  README.md
problem11/: Cargo.toml  README.md
problem12/: Cargo.toml  README.md
problem13/: Cargo.toml  README.md
problem14/: Cargo.toml  README.md
problem15/: Cargo.toml  README.md
problem16/: Cargo.toml  README.md
problem17/: Cargo.toml  README.md
problem18/: Cargo.toml  README.md
problem19/: Cargo.toml  README.md
problem2/: Cargo.toml  README.md
problem20/: Cargo.toml  README.md
problem20/src/: main.rs
problem21/: Cargo.toml  README.md
problem22/: Cargo.toml  README.md
problem23/: Cargo.toml  README.md
problem24/: Cargo.toml  README.md
problem25/: Cargo.toml  README.md
problem26/: Cargo.toml  README.md
problem27/: Cargo.toml  README.md
problem28/: Cargo.toml  README.md
problem29/: Cargo.toml  README.md
problem3/: Cargo.toml  README.md
problem30/: Cargo.toml  README.md
problem31/: Cargo.toml  README.md
problem32/: Cargo.toml  README.md
problem33/: Cargo.toml  README.md
problem34/: Cargo.toml  README.md
problem35/: Cargo.toml  README.md
problem36/: Cargo.toml  README.md  problem36.py
problem37/: Cargo.toml  README.md
problem38/: Cargo.toml  README.md
problem39/: Cargo.toml  README.md
problem4/: Cargo.toml  README.md
problem40/: Cargo.toml  README.md
problem41/: Cargo.toml  README.md
problem42/: Cargo.toml  README.md
problem43/: Cargo.toml  README.md
problem44/: Cargo.toml  README.md
problem45/: Cargo.toml  (+1 more)
(+100 files in other folders)
