[package]
name = "problem20"
version = "0.1.0"
authors = ["Daniel Martin <fizbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rug]
version = "^1.7"
default-features = false
features = ["integer"]
